<resources>
    <string name="app_name">SUTDCalendar_Login</string>
    <string name="etusernamehint">User Name(Email)</string>
    <string name="etpasswordhint">Password</string>
    <string name="btnsignintext">Sign in</string>
    <string name="tvsignup">New user? Sign up here!</string>
    <string name="tvloggedin">Welcome!</string>
    <string name="etsignupnamehint">Name</string>
    <string name="etsignupemailhint">Email</string>
    <string name="etsignupcodehint">Password</string>
    <string name="btnsignupcomplete">Sign Up</string>
    <string name="tvsignupbacktext">Already sign up? Sign in here!</string>
    <string name="btnsignouttext">Sign Out</string>
    <string name="logoutmenuname">Logout</string>
    <string name="settingsMenuname">Settings</string>
    <string name="refreshMenuname">Refresh</string>
    <string name="etsignupidnum">Student ID(length of 7)</string>
</resources>
